--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -1,66 +1,252 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../paginas/css/egipcia.css" />
+    <link rel="stylesheet" href="../paginas/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <title>Egípcia | SEPE</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../paginas/css/style.css">
-  <link rel="stylesheet" href="../paginas/css/egipcia.css">
-  <title>Egipcia | SEPE</title>
-</head>
-
-<body>
-  <header>
-    <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"></a>
-    <h1>Egipcia</h1>
-  </header>
-  <main>
-    <div class="container-main">
-      <div class="col">
-
-      </div>
-      <div class="col">
+  <body>
+    <header>
+      <a href="../paginas/index.html" id="logo"
+        ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
+      /></a>
+      <h1>EGÍPCIA</h1>
+    </header>
+    <div class="row">
+      <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+      background-repeat: repeat;
+      background-size: contain;">
         
       </div>
-      <div class="col">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat sunt, exercitationem vitae ullam laudantium
-        nobis illo fugiat dolor ipsam distinctio ipsum, quo voluptas quasi fugit quidem ab, natus harum doloribus?
-      </div>
-    </div>
-  </main>
-  <footer>
-    <div class="footer-container">
-      <div class="footer-logo">
-        <img src="../../../back/imagens/LYJEK.png" alt="Logo do site">
-      </div>
-      <div class="footer-links">
-        <ul>
-          <li><a href="../paginas/geral.html">Mitologia Geral</a></li>
-          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
-          <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
-          <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
-          <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
-          <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
-          <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
-          <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
-        </ul>
-      </div>
-      <div class="footer-social">
-        <ul>
-          <li><a href="https://github.com/spricigom"><i>Emili</i></a></li>
-          <li><a href="https://github.com/Joaovictor23t4"><i>João</i></a></li>
-          <li><a href="https://github.com/kauabarros-24"><i>Kauã</i></a></li>
-          <li><a href="https://github.com/dnzLucas"><i>Lucas</i></a></li>
-          <li><a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a></li>
-          <li><a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a></li>
-          <li><a href="https://github.com/YohanaJahn"><i>Yohana</i></a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
-    </div>
-  </footer>
-</body>
+      <div class="col-6">
+        <h1 class="h1-texto">Mitologia Egípcia</h1>
 
+        <p>
+          A mitologia egípcia reúne diversos mitos, lendas e histórias que
+          fizeram parte do imaginário religioso no Egito Antigo até a chegada do
+          Cristianismo.
+        </p>
+
+        <p>
+          Lembre-se que na Antiguidade a religião egípcia era baseada no
+          politeísmo, ou seja, o culto a vários deuses que ocorriam geralmente
+          nos templos dedicados a eles.
+        </p>
+
+        <p>
+          Os deuses egípcios eram na sua maioria antropomórficos,mistura de
+          animal com humano, mas também havia deuses zoomórficos, em forma de
+          animais.
+          <b
+            >Os deuses ou os princípios cósmicos eram chamados de Neteru os
+            quais foram divididos em:</b
+          >
+        </p>
+
+        <h2>Neterus Primordiais:</h2>
+        <p>
+          São os deuses mais importantes os quais estão associados com o mito de
+          criação (origem do universo):
+        </p>
+
+        <ol>
+          <li>
+            <b>Nun (Nu ou Ny):</b> simbolizava a água ou o líquido cósmico que
+            deu origem ao Universo.
+          </li>
+
+          <li>
+            <b>Atum (Atum-Rá, Tem, Temu, Tum e Atem):</b> representa a
+            transformação de Nun, sendo considerado aquele que deu origem a
+            explosão do Universo (semelhante ao Bing Bang) e que gerou os
+            diversos corpos celestes, separando assim, o céu e a Terra.
+          </li>
+
+          <li>
+            <b>Amon (ou Amun):</b> esposa de Mut, ele é considerado o rei dos
+            deuses.
+          </li>
+
+          <li>
+            <b>Aton (Aton ou Aten):</b> relacionado ao sol, ele foi o deus do
+            atomismo que estava relacionado com o disco solar.
+          </li>
+
+          <li>
+            <b>Rá (ou Ré):</b> deus da criação, sendo um dos principais deuses
+            do Egito.
+          </li>
+
+          <li>
+            <b>Ka:</b> força mística que representava a alma dos deuses e dos
+            homens.
+          </li>
+
+          <li>
+            <b>Ptah:</b> marido de Sekhmet e de Bastet, representava o deus
+            criador e protetor da cidade de Mênfis. Além disso, era considerado
+            deus dos artesãos e arquitetos.
+          </li>
+
+          <li><b>Hu:</b> representava a palavra de criação do Universo.</li>
+        </ol>
+
+        <h2>Neterus Geradores:</h2>
+
+        <ol>
+          <li><b>Shu:</b> filho de Atum e deus do ar.</li>
+
+          <li><b>Tefnut:</b> filho de Atum e deusa da umidade.</li>
+
+          <li>
+            <b>Geb:</b> filho dos irmãos Shu e Tefnut, Geb é do deus da terra.
+          </li>
+
+          <li>
+            <b>Nut:</b> filha dos irmãos Shu e Tefnut, Nut é a deusa dos céus.
+          </li>
+        </ol>
+
+        <h2>Neterus da Primeira Geração:</h2>
+
+        <ol>
+          <li>
+            <b>Osíris:</b> filho mais velho do casal Geb e Nut, Osíris foi o
+            primeiro faraó do Egito assassinado por seu irmão Set passando a ser
+            juiz dos mortos no mundo subterrâneo.
+          </li>
+
+          <li>
+            <b>Ísis:</b> esposa-irmã de Osíris e filha de Geb e Nur, é deusa do
+            amor, da maternidade, da fertilidade e da magia. É protetora da
+            natureza e considerada modelo de mãe e esposa.
+          </li>
+
+          <li>
+            <b>Seth (ou Set):</b> deus da tempestade, do caos e da violência.
+            Foi ele quem matou seu irmão Osíris.
+          </li>
+
+          <li>
+            <b>Néftis (ou Nephthys):</b> irmã-esposa de Seth e de Osíris e muito
+            parecida com sua irmã Ísis, sendo considerada outra deusa mãe na
+            mitologia egípcia.
+          </li>
+        </ol>
+
+        <h2>Neterus da Segunda Geração:</h2>
+
+        <li>
+          <b>Hórus:</b> filho de Osíris e Ísis, Hórus é o deus do céu quem matou
+          seu tio Seth por vingança.
+        </li>
+
+        <li>
+          <b>Hator:</b> esposa de Hórus, deusa das festas, do vinho e da
+          alegria. É considerada guardiã das mulheres e protetora dos amantes.
+        </li>
+
+        <li><b>Tot (ou Thoth):</b> deus da sabedoria.</li>
+
+        <li>
+          <b>Maat:</b> mulher de Toth, deusa da justiça, da verdade e da ordem.
+        </li>
+        <li>
+          <b>Anúbis:</b> filho de Osíris e Néftis, Anúbis é o deus dos mortos e
+          do submundo, era ele que guiava os mortos após sua morte.
+        </li>
+
+        <li>
+          <b>Anuket (ou Anukis):</b> deusa da fertilidade a qual estava
+          relacionada com a água
+        </li>
+
+        <li>
+          <b>Bastet:</b> filha de Maat, é a deusa da fertilidade e do parto,
+          protetora das mulheres.
+        </li>
+
+        <li>
+          <b>Sokar (Seker ou Sokaris):</b> relacionado com a morte, era um deus
+          funerário.
+        </li>
+
+        <li>
+          <b>Sekhmet:</b> filha de Rá e por isso, reflete o aspecto destrutivo
+          do sol.
+        </li>
+
+        <div class="botao">
+          <a href="../quiz/egipcia.html"
+            ><input type="button" value="COMEÇAR" id="btnComecar"
+          /></a>
+        </div>
+      </div>
+      <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+      background-repeat: repeat;
+      background-size: contain;">
+
+      </div>
+    </div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="../../../back/imagens/LYJEK.png" alt="Logo do site" />
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="../paginas/index.html">Página Inicial</a></li>
+            <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+            <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
+            <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
+            <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+            <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
+            <li><a href="../paginas/japonesa.html">Mitologia Japonesa</a></li>
+            <li>
+              <a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a>
+            </li>
+            <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
+            <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <ul>
+            <li>
+              <a href="https://github.com/spricigom"><i>Emili</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/Joaovictor23t4"><i>João</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/kauabarros-24"><i>Kauã</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/dnzLucas"><i>Lucas</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/YohanaJahn"><i>Yohana</i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
+      </div>
+    </footer>
+  </body>
 </html>
