--- a/front/site/paginas/geral.html
+++ b/front/site/paginas/geral.html
@@ -14,19 +14,23 @@
   </header>
   <main>
     <div class="container-main">
-      <div class="col">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem minus eos iste ab laudantium quod dolorem
-        voluptas dolore, nihil quam dignissimos, quidem, quo maiores vel voluptatibus debitis exercitationem excepturi
-        cumque!
+      <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+      background-repeat: repeat;
+      background-size: contain;">
       </div>
       <div class="col">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio laborum harum, eligendi, velit explicabo
         officia repellat culpa doloremque, officiis quisquam itaque maiores? Eveniet consequuntur incidunt nostrum autem
         repudiandae tempore illo!
+        <div class="botao">
+          <a href="../quiz/geral.html"
+            ><input type="button" value="COMEÇAR" id="btnComecar"
+          /></a>
+        </div>
       </div>
-      <div class="col">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat sunt, exercitationem vitae ullam laudantium
-        nobis illo fugiat dolor ipsam distinctio ipsum, quo voluptas quasi fugit quidem ab, natus harum doloribus?
+      <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+      background-repeat: repeat;
+      background-size: contain;">
       </div>
     </div>
   </main>
@@ -37,11 +41,13 @@
       </div>
       <div class="footer-links">
         <ul>
-          <li><a href="../paginas/geral.html">Mitologia Geral</a></li>
-          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
+          <li><a href="../paginas/index.html">Página Inicial</a></li>
           <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+          <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
           <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+          <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
+          <li><a href="../paginas/japonesa.html">Mitologia Japonesa</a></li>
           <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
           <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
           <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
