--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -17,11 +17,9 @@
     <h1>GREGA</h1>
   </header>
   <div class="row">
-    <div class="col">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+    <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+    background-repeat: repeat;
+    background-size: contain;">
     </div>
     <div class="col-6">
       <h1 class="h1-texto">Mitologia Grega:</h1>
@@ -121,11 +119,9 @@
         <a href="../quiz/grega.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
       </div>
     </div>
-    <div class="col">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+    <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+    background-repeat: repeat;
+    background-size: contain;">
     </div>
   </div>
   <footer>
@@ -136,10 +132,12 @@
       <div class="footer-links">
         <ul>
           <li><a href="../paginas/index.html">Página Inicial</a></li>
-          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
           <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+          <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
           <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+          <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
+          <li><a href="../paginas/japonesa.html">Mitologia Japonesa</a></li>
           <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
           <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
           <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
