--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+        <ul class="lista-nav">
+            <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
+            <li>
+                <a href="#">QUIZ <span id="seta-baixo">&darr;</span></a>
+                <ul class="dropdown">
+                    <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+                    <li class="link-dropdown" id="linkFenicia"><a href="fenicia.html">Fenícia</a></li>
+                    <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
+                    <li class="link-dropdown" id="linkHindu"><a href="hindu.html">Hindu</a></li>
+                    <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
+                    <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+                    <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
+                    <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
+                </ul>
+            </li>
+            <li id="linkNordica"><a href="../paginas/nordica.html">MITOLOGIA NÓRDICA</a></li>
+        </ul>
+    </nav>
+</header>
   <div class="container">
     <div class="tabs">
       <input id="egipcia" type="radio" name="slider" checked>
@@ -117,7 +138,13 @@
         </div>
       </div>
     </div>
+
+
+
   </div>
+  <section style="height: 500px;" >
+
+  </section>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
