--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -15,21 +15,18 @@
 
   <header>
     <a href="../paginas/index.html" id="logo"
-      ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
+      ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
     /></a>
     <h1>HINDU</h1>
   </header>
 
   <div class="row">
-    <div class="col">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+    <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+    background-repeat: repeat;
+    background-size: contain;">
     </div>
     <div class="col-6">
-      <h1 class="h1-texto">Mitologia Hindu:</h1>
+      <h1 class="h1-texto">Mitologia Hindu</h1>
       <p>Está fundada nos Vedas, que são os livros sagrados dos hindus. Segundo a crença, o próprio Brahma os escreveu.
         Brahma é o Deus supremo da tríade hindu. Seus atributos são representados pelos três poderes: criação,
         conservação e destruição, que formam a Trimuri ou trindade dos principais deuses: Brahma, Vishnu e Shiva,
@@ -232,12 +229,9 @@
           <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
         </div>
     </div>
-    <div class="col">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
-      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+    <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+    background-repeat: repeat;
+    background-size: contain;">
     </div>
   </div>
   <footer>
@@ -248,10 +242,12 @@
       <div class="footer-links">
         <ul>
           <li><a href="../paginas/index.html">Página Inicial</a></li>
-          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
           <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+          <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
           <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+          <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
+          <li><a href="../paginas/japonesa.html">Mitologia Japonesa</a></li>
           <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
           <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
           <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
