--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -16,7 +16,9 @@
     <h1>FENÍCIA</h1>
   </header>
   <div class="row">
-    <div class="col">
+    <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+    background-repeat: repeat;
+    background-size: contain;">
       1 of 3
     </div>
     <div class="col-6">
@@ -81,9 +83,15 @@
       vitae!
       Nostrum atque est ullam soluta, quae aliquid eum a itaque modi nisi distinctio provident, libero perferendis in?
       Sequi unde, cumque vero, quis vel tempora accusantium repellendus nobis reiciendis fugiat magni!
+      <div class="botao">
+        <a href="../quiz/irlandesa.html"
+          ><input type="button" value="COMEÇAR" id="btnComecar"
+        /></a>
+      </div>
     </div>
-    <div class="col">
-      3 of 3
+    <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+    background-repeat: repeat;
+    background-size: contain;">
     </div>
   </div>
   </div>
@@ -95,10 +103,12 @@
       <div class="footer-links">
         <ul>
           <li><a href="../paginas/index.html">Página Inicial</a></li>
-          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
           <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+          <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
           <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+          <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
+          <li><a href="../paginas/japonesa.html">Mitologia Japonesa</a></li>
           <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
           <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
           <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
