Arrumando a página da nórdica

--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -357,6 +357,12 @@
                 </div>
             </div>
         </section>
+
+        <section id="fim">
+            <h1>Fim, obrigado por participar!</h1>
+
+            <p id="acertos"></p>
+        </section>
     </main>
 </body>
 
