Arrumamos o tamanho dos botões

--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -112,16 +112,16 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao2" id="" value="errado"> A - Fenrir
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado"> A - Fenrir
                 </label>
                 <label>
-                    <input type="radio" name="questao2" id="" value="errado"> B - Sleipnir
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado"> B - Sleipnir
                 </label>
                 <label>
-                    <input type="radio" name="questao2" id="" value="errado"> C - Jormungandr
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado"> C - Jormungandr
                 </label>
                 <label>
-                    <input type="radio" name="questao2" id="" value="certo"> D - Skoll
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo"> D - Skoll
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta2">
@@ -136,16 +136,16 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao3" id="" value="errado"> A - Valhalla
+                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado"> A - Valhalla
                 </label>
                 <label for="">
-                    <input type="radio" name="questao3" id="" value="errado"> B - Helheim
+                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado"> B - Helheim
                 </label>
                 <label for="">
-                    <input type="radio" name="questao3" id="" value="errado"> C - Midgard
+                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado"> C - Midgard
                 </label>
                 <label for="">
-                    <input type="radio" name="questao3" id="" value="certo"> D - Asgard
+                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="certo"> D - Asgard
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta3">
@@ -161,19 +161,19 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao4" id="" value="certo"> A - Odin (sabedoria), Thor (força), Freyja
+                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="certo"> A - Odin (sabedoria), Thor (força), Freyja
                     (amor)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> B - Loki (trapaça), Balder (beleza), Freyr
+                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> B - Loki (trapaça), Balder (beleza), Freyr
                     (fertilidade)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> C - Freyja (amor), Tyr (coragem), Heimdall
+                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> C - Freyja (amor), Tyr (coragem), Heimdall
                     (vigilância)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> D - Odin (sabedoria), Freyja (amor), Thor
+                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> D - Odin (sabedoria), Freyja (amor), Thor
                     (trovão)
                 </label>
 
@@ -191,19 +191,19 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao5" id="" value="errado"> A - Uma espada mágica; representa o poder
+                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado"> A - Uma espada mágica; representa o poder
                     dos deuses.
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="certo"> B - Uma árvore cósmica que conecta os Nove
+                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="certo"> B - Uma árvore cósmica que conecta os Nove
                     Mundos; simboliza a ordem do universo
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="errado"> C - Uma serpente gigante que envolve o
+                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado"> C - Uma serpente gigante que envolve o
                     mundo; representa a destruição iminente
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="errado"> D - Um pássaro mágico
+                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado"> D - Um pássaro mágico
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta5">
@@ -218,19 +218,19 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao6" id="" value="errado"> A - Mjölnir foi forjado por Loki e usado
+                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> A - Mjölnir foi forjado por Loki e usado
                     para criar trovões e relâmpagos.
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="errado"> B - Mjölnir foi roubado por um gigante e
+                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> B - Mjölnir foi roubado por um gigante e
                     Thor teve que buscá-lo em uma jornada épica.
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="certo"> C - Mjölnir foi presenteado a Thor por Odin
+                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo"> C - Mjölnir foi presenteado a Thor por Odin
                     e é capaz de derrotar os inimigos dos deuses.
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="errado"> D -Mjölnir é uma arma lendária, mas não
+                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> D -Mjölnir é uma arma lendária, mas não
                     desempenha um papel importante na mitologia nórdica.
                 </label>
 
@@ -248,19 +248,19 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao7" id="" value="errado"> A - Uma grande festa dos deuses antes do
+                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> A - Uma grande festa dos deuses antes do
                     fim do mundo.
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="errado"> B - Uma jornada de Thor para resgatar seu
+                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> B - Uma jornada de Thor para resgatar seu
                     martelo Mjölnir do submundo.
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="certo"> C - Uma batalha final entre os deuses e as
+                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo"> C - Uma batalha final entre os deuses e as
                     forças do caos, resultando na destruição do mundo.
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="errado"> D - D A ascensão de um novo deus supremo
+                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> D - D A ascensão de um novo deus supremo
                     para governar os Nove Mundos.
                 </label>
 
@@ -277,19 +277,19 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao8" id="" value="errado"> A - Baldur era um deus da guerra que
+                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> A - Baldur era um deus da guerra que
                     morreu em batalha, enfraquecendo os deuses.
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="errado"> B - Baldur era um deus da beleza que se
+                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> B - Baldur era um deus da beleza que se
                     apaixonou por uma mortal e morreu de tristeza.
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="certo"> C - Baldur era imortal, e sua morte foi uma
+                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo"> C - Baldur era imortal, e sua morte foi uma
                     surpresa para os deuses, que ficaram abalados.
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="errado"> D - Baldur era um deus amado cuja morte
+                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> D - Baldur era um deus amado cuja morte
                     levou a uma série de eventos que levaram ao Ragnarök.
                 </label>
                 <div class="buttonResponder">
@@ -307,19 +307,19 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao9" id="" value="errado"> A - A Hela, a deusa da morte, que conduz
+                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> A - A Hela, a deusa da morte, que conduz
                     as almas para o Valhalla.
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="errado"> B - Freyja, a deusa do amor, que traz
+                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> B - Freyja, a deusa do amor, que traz
                     felicidade aos guerreiros caídos.
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="certo"> C - Sigrdrífa, a valquíria que desperta o
+                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="certo"> C - Sigrdrífa, a valquíria que desperta o
                     herói Sigurd e o ajuda em suas aventuras.
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="errado"> D - Brynhild, a valquíria que cai em
+                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> D - Brynhild, a valquíria que cai em
                     desgraça e é aprisionada em uma torre de fogo.
                 </label>
 
@@ -336,19 +336,19 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao10" id="" value="errado"> A - Os vikings rejeitaram completamente a
+                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> A - Os vikings rejeitaram completamente a
                     mitologia nórdica em favor de outras crenças
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="errado"> B - Os vikings abandonaram suas próprias
+                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> B - Os vikings abandonaram suas próprias
                     crenças em favor do cristianismo e não foram influenciados pela mitologia.
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="certo"> C - A mitologia nórdica inspirou a arte, a
+                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="certo"> C - A mitologia nórdica inspirou a arte, a
                     poesia e as sagas vikings, refletindo valores e crenças culturais.
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="errado"> D - mitologia nórdica não teve impacto
+                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> D - mitologia nórdica não teve impacto
                     significativo na cultura viking; eles eram mais pragmáticos e guerreiros do que preocupados com a
                     mitologia.
                 </label>
